Fixed display of current tempo and tap button's z-index.

--- a/modgui/bolliedelay.css
+++ b/modgui/bolliedelay.css
@@ -82,6 +82,7 @@
     position: absolute;
     left: 180px;
     bottom: 12px;
+    z-index: 20;
 }
 
 .bolliedelay .mod-footswitch.on {
@@ -182,11 +183,11 @@
     right:0;
     z-index:60;
     padding: 5px;
-    top: 30px;
+    top: 23px;
     color: #32af3e;
     position:absolute;
     background-color: #111111;
-    text-align: right;
+    text-align: center;
 }
 
 .bolliedelay .bollie-group .mod-knob .mod-knob-image {
